src/objects/CountryRisk__c.object
<CustomObject>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessRisk__c</fullName>
        <label>Business Risk</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetentionDiscrimination__c</fullName>
        <label>Detention &amp; Discrimination</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KidnapRansom__c</fullName>
        <label>Kidnap &amp; Ransom</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SafetyRating__c</fullName>
        <label>Safety Rating</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Country Risk</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Risk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>